--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <div id='image'>
 
         <p> <b>Photography</b><br>
-            <a target = '_blank' href = 'https://orphin.github.io/About-me/about-me'>
+            <a target = '_blank' href = 'https://franklynts.github.io/portfolio/'>
         <img  id = 'photo' src = 'images/img16.JPG'  alt = 'me'></a></p>
 
         <p> <b>Bus Catalog</b><br>
-            <a target = '_blank' href = 'https://orphin.github.io/Bus-mall/'>
+            <a target = '_blank' href = 'https://franklynts.github.io/Bus-mall/'>
         <img id='bus' src = 'images/bus2.jpg' alt ='bus'></a></p>
 
         <p> <b>Salmon Cookies</b><br>
-            <a target = '_blank' href = 'https://orphin.github.io/cookie-stand/'>
+            <a target = '_blank' href = 'https://franklynts.github.io/cookie-stand/'>
         <img id='cookies' src = 'images/cookies.jpg' alt = 'cookies'></a></p>
 
-        <p> <b>Beer Buddy*<br> Under construction</b><br>
-            <a target = '_blank' href = 'https://alchemy-beer-fellows.github.io/beer-app/'>
+        <p> <b>Beer Buddy*</b> Collaboration<br>
+            <a target = '_blank' href = 'https://franklynts.github.io/beer-app/'>
         <img id='beer' src = 'images/beer.jpg' alt = 'beer' ></a></p>
     </div>
 </body>
