--- a/index.html
+++ b/index.html
@@ -2,38 +2,29 @@
 <html>
 
 <head>
-    <title>Project Portfolio</title>
-    <link href='index.css' rel='stylesheet' type='text/css'>
-    <link async href="http://fonts.googleapis.com/css?family=Aladin" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"
-    />
-    <link async href="http://fonts.googleapis.com/css?family=Arizonia" data-generated="http://enjoycss.com" rel="stylesheet"
-        type="text/css" />
+        <title>Project Portfolio</title>
+        <link href='index.css' rel='stylesheet' type='text/css'>
+        <link async href="http://fonts.googleapis.com/css?family=Aladin" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"
+        />
+        <link async href="http://fonts.googleapis.com/css?family=Arizonia" data-generated="http://enjoycss.com" rel="stylesheet"
+            type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-        
+
 </head>
 <header class="inset-text-effect">Project Portfolio</header>
 
 <body>
     <h2>Welcome to my page,<br> here you will find links to my current and future projects.</h2>
-
-    <div id='image'>
-
-        <p> <b>Photography</b><br>
-            <a target = '_blank' href = 'https://franklynts.github.io/portfolio/'>
-        <img  id = 'photo' src = 'images/img16.JPG'  alt = 'me'></a></p>
-
-        <p> <b>Bus Catalog</b><br>
-            <a target = '_blank' href = 'https://franklynts.github.io/Bus-mall/'>
-        <img id='bus' src = 'images/bus2.jpg' alt ='bus'></a></p>
-
-        <p> <b>Salmon Cookies</b><br>
-            <a target = '_blank' href = 'https://franklynts.github.io/cookie-stand/'>
-        <img id='cookies' src = 'images/cookies.jpg' alt = 'cookies'></a></p>
-
-        <p> <b>Beer Buddy*</b> Collaboration<br>
-            <a target = '_blank' href = 'https://franklynts.github.io/beer-app/'>
-        <img id='beer' src = 'images/beer.jpg' alt = 'beer' ></a></p>
-    </div>
 </body>
+    <div id = "links">
+        <p id="photo"><a target='_blank' href='https://franklynts.github.io/portfolio/'><b>Photography</b></a></p>
+
+
+        <p id="bus"> <a target='_blank' href='https://franklynts.github.io/Bus-mall/'><b>Bus Catalog</b><br></a></p>
+
+        <p id="cookie"> <a target='_blank' href='https://franklynts.github.io/cookie-stand/'><b>Salmon Cookies</b><br></a></p>
+
+        <p id="beer"><a target='_blank' href='https://franklynts.github.io/beer-app/'><b>Beer Buddy*</b> Collaboration<br></a> </p>
+    </div>
 
 </html>
