--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
         <title>Project Portfolio</title>
         <link href='index.css' rel='stylesheet' type='text/css'>
-        <link async href="http://fonts.googleapis.com/css?family=Aladin" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"
-        />
-        <link async href="http://fonts.googleapis.com/css?family=Arizonia" data-generated="http://enjoycss.com" rel="stylesheet"
-            type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 
 </head>
-<header class="inset-text-effect">Project Portfolio</header>
+<header class="header">Project Portfolio</header>
 
 <body>
     <h2>Welcome to my page,<br> here you will find links to my current and future projects.</h2>
