web style changes

--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
 </body>
     <div id = "links">
         <p id="photo"><a target='_blank' href='https://franklynts.github.io/portfolio/'><b>Photography</b></a></p>
-
-
-        <p id="bus"> <a target='_blank' href='https://franklynts.github.io/Bus-mall/'><b>Bus Catalog</b><br></a></p>
-
-        <p id="cookie"> <a target='_blank' href='https://franklynts.github.io/cookie-stand/'><b>Salmon Cookies</b><br></a></p>
-
-        <p id="beer"><a target='_blank' href='https://franklynts.github.io/beer-app/'><b>Beer Buddy*</b> Collaboration<br></a> </p>
+        <p id="bus"> <a target='_blank' href='https://franklynts.github.io/Bus-mall/'><b>Bus Catalog</b></a></p>
+        <p id="cookie"> <a target='_blank' href='https://franklynts.github.io/cookie-stand/'><b>Salmon Cookies</b></a></p>
+        <p id="beer"><a target='_blank' href='https://franklynts.github.io/beer-app/'><b>Beer Buddy*</b> Collaboration</a> </p>
     </div>
 
 </html>
